# locoia-challenge

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Challenge-Reynaldo.md  README.md  TODO.md  docker-compose.yml  gistapi.Dockerfile  mypy.ini  pyproject.toml
.github/workflows/: checks.yml
gistapi/: __init__.py  app.py  app_logic.py  gistapi.py  github_calls.py
scripts/: build_images.sh  git_tag.sh  lint.sh  precommit.sh  run.sh  test.sh  type_check.sh
tests/: app_e2e_test.py  app_it_test.py  app_logic_unit_test.py  app_unit_test.py  conftest.py  gistapi_unit_test.py  github_calls_it_test.py  github_calls_unit_test.py
